# weather-dashboard

./: .gitignore  docker-compose.yml
board-service/: .env.template  README.md  pyproject.toml  rpi-board.service
board-service/src/: app.py  configuration.py  dht11.py  domoticz_client.py  ds18b20.py  lcd1602.py
